Add information about project, update README.md, add compiling instruction for ClientGUI.java and .jar