@@ -1,1 +1,25 @@
 # IFT1025-TP2-server
+
+## FAQ
+### Location of JAR file
+client_fx.jar: ```/out/artifacts/ClientGUI_jar3/client_fx.jar```
+client_simple.jar: ```/out/artifacts/ClientCMD_jar2/client_simple.jar```
+server.jar: ```/out/artifacts/Server_jar/Server.jar```
+
+### How to compile client_fx.jar
+1. Add JavaFX library to the project by following this guide: 
+```https://medium.com/codex/solved-error-javafx-runtime-components-are-missing-and-are-required-to-run-this-application-ec4779eb796d```
+
+2. Additionally, you need to add the following VM options when running client_fx.jar: 
+```--module-path "<Path to lib folder of JavaFX library>" --add-modules javafx.fxml,javafx.controls,javafx.graphics```
+
+### Link to Github repository
+```https://github.com/viviane-b/IFT1025-TP2-server```
+
+### Demo video
+- demo_client_simple: ```https://udemontreal-my.sharepoint.com/:v:/g/personal/hoang_quan_tran_1_umontreal_ca/ETALLOvNOspNl5RfuMKbifcBKbNXFjwlPl458aC1dVDw2Q?e=9jAaiQ```
+- demo_client_fx: ```https://udemontreal-my.sharepoint.com/:v:/g/personal/hoang_quan_tran_1_umontreal_ca/ETALLOvNOspNl5RfuMKbifcBKbNXFjwlPl458aC1dVDw2Q?e=9jAaiQ```
+
+### Our team members: 
+- Viviane Binet: 
+- Hoang Quan Tran: 20249088
