@@ -7,6 +7,14 @@ import javafx.application.Application;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
 
+/**
+ * IMPORTANT:
+ * À ajouter à "VM options" quant à l'exécution de client_fx:
+ * --module-path "<Chemin absolue mene à la library JavaFX>" --add-modules javafx.fxml,javafx.controls,javafx.graphics
+ * Et importer la library JavaFX dans le projet en faisant:
+ * File -> Project Structure -> Libraries -> + -> <Dossier lib de la library JavaFX>
+ * Il est important de faire ces 2 étapes sinon le programme ne fonctionnera pas.
+ */
 
 public class ClientGUILauncher extends Application {
 	//TODO: bonus question about multithreading
@@ -34,7 +42,4 @@ public class ClientGUILauncher extends Application {
 		stage.setTitle("Inscription UdeM");
 		stage.show();
 	}
-
-
-
 }
